[package]
edition      = "2021"
name         = "ebike_control"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "ebike_control"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal                = { version = "1.0.0", features = ["esp32s3", "unstable"] }

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = { version = "0.6.0", features = [] }
critical-section = "1.2.0"
embassy-executor = { version = "0.9.1"}
embassy-time = "0.5.0"
# esp-hal-embassy = { version = "0.9.0", features = ["esp32s3"] }
# esp-wifi = { version = "0.15.0", features = [
#   "ble",
#   "builtin-scheduler",
#   "coex",
#   "esp-alloc",
#   "esp32s3",
#   "smoltcp",
#   "wifi",
# ] }
# smoltcp = { version = "0.12.0", default-features = false, features = [
#   "medium-ethernet",
#   "multicast",
#   "proto-dhcpv4",
#   "proto-dns",
#   "proto-ipv4",
#   "socket-dns",
#   "socket-icmp",
#   "socket-raw",
#   "socket-tcp",
#   "socket-udp",
# ] }
static_cell = "2.1.1"
trouble-host = { version = "0.5.1", features = ["derive", "scan", "security"] }
esp-println = { version = "0.16.1", features = ["esp32s3","log-04"]}
esp-backtrace = { version = "0.18.1", features = ["esp32s3", "defmt"] }
esp-hal-smartled = { version = "0.17.0", features = ["esp32s3"]}
smart-leds = "0.4.0"
esp-radio = {version="0.17.0", features = [
    "esp32s3",
    "ble",
    # "esp-now",
    # "esp-alloc",
    "unstable"
    ]}
esp-rtos = { version = "0.2.0", features = [
    "embassy", 
    "esp32s3", 
    "esp-radio", 
    "esp-alloc"
    ] }
esp-alloc = "0.9.0"
embassy-futures = "0.1.2"
defmt = "1.0.1"
log = "0.4.28"
trouble-host-macros = "0.3.0"
embassy-sync = "0.7.2"
rand_core = { version = "0.6", default-features = false}
embedded-hal-async = "1.0.0"
embassy-embedded-hal = "0.5.0"
esp-storage = {version = "0.8.1", features = ["esp32s3"]}
embedded-storage-async = "0.4.1"
sequential-storage = "6.0.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
